# iscc-rs

./: Cargo.toml  README.md
benches/: bench.rs
src/: base58.rs  cid_image.rs  cid_mixed.rs  cid_text.rs  constants.rs  did.rs  hashes.rs  iid.rs  lib.rs  mid.rs  normalization.rs
tests/: test_conformance.rs  test_identifiers.rs
tests/test_data/: mediafile.html  test-70k.txt  test_data.json
