[package]
name = "iscc-rs"
version = "0.1.0"
authors = ["Alexander Niederbühl <a.niederbuehl@gmail.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "iscc"

[dependencies]
bit-vec = "0.6"
hex = "0.3"
image = "0.21"
itertools = "0.8"
sha2 = "0.8"
unic-ucd-category = "0.9"
unicode-normalization = "0.1"
xxhash2 = "0.1"
doc-comment = "0.3"

[dev-dependencies]
serde_json = "1.0"
serde = "1.0"
